[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/ai.gd" type="Script" id=1]
[ext_resource path="res://scripts/classes/state_machine.gd" type="Script" id=2]

[node name="AI" type="Node2D" groups=["ai_controller"]]
script = ExtResource( 1 )

[node name="BuyTileTimer" type="Timer" parent="."]
one_shot = true

[node name="PlaceBuildingTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="BuyResourceTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="SellResourceTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="TransitionTimer" type="Timer" parent="StateMachine"]
one_shot = true

[connection signal="timeout" from="BuyTileTimer" to="." method="_on_BuyTileTimer_timeout"]
[connection signal="timeout" from="PlaceBuildingTimer" to="." method="_on_PlaceBuildingTimer_timeout"]
[connection signal="timeout" from="BuyResourceTimer" to="." method="_on_BuyResourceTimer_timeout"]
[connection signal="timeout" from="SellResourceTimer" to="." method="_on_SellResourceTimer_timeout"]
